 cmake_minimum_required(VERSION 2.8.12)
 project(Bamboo)

 
 if (WIN32)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++latest")
 set(CONAN_DISABLE_CHECK_COMPILER TRUE)
else()
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")    
endif()

set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

include(${CMAKE_BINARY_DIR}/build/conanbuildinfo.cmake)
conan_basic_setup()

include_directories(/usr/local/include/)

file(GLOB CORE_SOURCES "src/core/*.cpp"  "src/shared/*.cpp" )
file(GLOB SERVER_SOURCES "src/server/*.cpp")
file(GLOB EXTERNAL_SOURCES "src/external/ed25519/*.c" "src/external/bigint/*.cpp")


set (WAMR_BUILD_PLATFORM "darwin")
set (WAMR_BUILD_TARGET "X86_64")
set (WAMR_BUILD_INTERP 1)
set (WAMR_BUILD_FAST_INTERP 1)
set (WAMR_BUILD_AOT 1)
set (WAMR_BUILD_LIBC_BUILTIN 1)
set (WAMR_BUILD_LIBC_WASI 1)
set (WAMR_BUILD_SIMD 1)
set (WAMR_ROOT_DIR /Users/saliksyed/src/wasm-micro-runtime)

include (${WAMR_ROOT_DIR}/build-scripts/runtime_lib.cmake)
add_library(vmlib ${WAMR_RUNTIME_LIB_SOURCE})

if (UNIX)
    add_executable(tests ${CORE_SOURCES} ${SERVER_SOURCES} ${EXTERNAL_SOURCES} ./src/tests/tests.cpp)
    add_executable(server ${CORE_SOURCES} ${SERVER_SOURCES} ${EXTERNAL_SOURCES} ./src/tools/server.cpp)
    add_executable(cli ${CORE_SOURCES} ${EXTERNAL_SOURCES} ./src/tools/cli.cpp)
    add_executable(loader ${CORE_SOURCES} ${SERVER_SOURCES} ${EXTERNAL_SOURCES} ./src/tools/loader.cpp)
    add_executable(tx ${CORE_SOURCES} ${SERVER_SOURCES}  ${EXTERNAL_SOURCES} ./src/tools/tx.cpp)
    add_executable(miner ${CORE_SOURCES} ${SERVER_SOURCES} ${EXTERNAL_SOURCES} ./src/tools/miner.cpp)
    add_executable(keygen ${CORE_SOURCES} ${SERVER_SOURCES} ${EXTERNAL_SOURCES} ./src/tools/keygen.cpp)
    if (APPLE)
        target_link_libraries(tests ${CONAN_LIBS} vmlib /usr/local/Cellar/leveldb/1.23/lib/libleveldb.a /usr/local/Cellar/snappy/1.1.9/lib/libsnappy.a)
        target_link_libraries(server ${CONAN_LIBS} vmlib /usr/local/Cellar/leveldb/1.23/lib/libleveldb.a /usr/local/Cellar/snappy/1.1.9/lib/libsnappy.a)
        target_link_libraries(cli ${CONAN_LIBS} vmlib /usr/local/Cellar/leveldb/1.23/lib/libleveldb.a /usr/local/Cellar/snappy/1.1.9/lib/libsnappy.a)
        target_link_libraries(loader ${CONAN_LIBS} vmlib /usr/local/Cellar/leveldb/1.23/lib/libleveldb.a /usr/local/Cellar/snappy/1.1.9/lib/libsnappy.a)
        target_link_libraries(tx ${CONAN_LIBS} vmlib /usr/local/Cellar/leveldb/1.23/lib/libleveldb.a /usr/local/Cellar/snappy/1.1.9/lib/libsnappy.a)
        target_link_libraries(miner ${CONAN_LIBS} vmlib /usr/local/Cellar/leveldb/1.23/lib/libleveldb.a /usr/local/Cellar/snappy/1.1.9/lib/libsnappy.a)
        target_link_libraries(keygen ${CONAN_LIBS} vmlib /usr/local/Cellar/leveldb/1.23/lib/libleveldb.a /usr/local/Cellar/snappy/1.1.9/lib/libsnappy.a)
    endif()

    if (UNIX AND NOT APPLE)
        target_link_libraries(tests ${CONAN_LIBS} -lleveldb -lstdc++fs)
        target_link_libraries(server ${CONAN_LIBS} -lleveldb -lstdc++fs)
        target_link_libraries(cli ${CONAN_LIBS} -lleveldb -lstdc++fs)
        target_link_libraries(loader ${CONAN_LIBS} -lleveldb -lstdc++fs)
        target_link_libraries(tx ${CONAN_LIBS} -lleveldb -lstdc++fs)
        target_link_libraries(miner ${CONAN_LIBS}  -lleveldb -lstdc++fs)
        target_link_libraries(keygen ${CONAN_LIBS}  -lleveldb -lstdc++fs)
    endif()
endif()

